fix blur on safari

--- a/src/app/blog/blog.less
+++ b/src/app/blog/blog.less
@@ -79,6 +79,7 @@
     filter: blur(30px);
     overflow: hidden;
     position: relative;
+    margin: -5px 0;
 
     @media screen and (max-width: @screen-md) {
       height: 35rem ;
